[package]
name = "irc_hook"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.6"
irc = "0.15"
tokio = { version = "1.21", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
http = "0.2"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[dev-dependencies]
tokio-test = "0.4"
httptest = "0.15"